--- a/styles.css
+++ b/styles.css
@@ -1,349 +1,138 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+// Seleciona os elementos do formulário.
+const form = document.querySelector("form");
+const amount = document.getElementById("amount");
+const expense = document.getElementById("expense");
+const category = document.getElementById("category");
 
-:root {
-  font-family: "Open Sans", sans-serif;
-  font-size: 16px;
-}
+// Seleciona os elementos da lista
+const expenseList = document.querySelector("ul");
+const expensesQuantity = document.querySelector("aside header p span");
 
-::-webkit-scrollbar {
-  width: 0.5rem;
-}
+// Captura o evento de input e permite apenas números inteiros
+amount.oninput = () => {
+  let value = amount.value.replace(/\D/g, ""); // remove tudo que não for dígito
+  amount.value = value;
+};
 
-::-webkit-scrollbar-track {
-  background-color: transparent;
-}
+// Captura o evento de submit do formulário
+form.onsubmit = (event) => {
+  event.preventDefault();
 
-::-webkit-scrollbar-thumb {
-  background: #e4ece9;
-}
+  const newExpense = {
+    id: new Date().getTime(),
+    expense: expense.value,
+    category_id: category.value,
+    category_name: category.options[category.selectedIndex].text,
+    amount: amount.value,
+    created_at: new Date(),
+  };
 
-body {
-  width: 100%;
-  height: 100vh;
+  expenseAdd(newExpense);
+};
 
-  background-color: #e4ece9;
+// Adiciona um novo item na lista
+function expenseAdd(newExpense) {
+  try {
+    const expenseItem = document.createElement("li");
+    expenseItem.classList.add("expense");
 
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    const expenseIcon = document.createElement("img");
+    expenseIcon.setAttribute("src", `img/${newExpense.category_id}.svg`);
+    expenseIcon.setAttribute("alt", newExpense.category_name);
 
-  color: #1f2523;
-}
+    const expenseInfo = document.createElement("div");
+    expenseInfo.classList.add("expense-info");
 
+    const expenseName = document.createElement("strong");
+    expenseName.textContent = newExpense.expense;
 
-  .logo {
-    height: 180px;
-    margin-left: 0px;
-    margin-bottom: .5px;
-}
+    const expenseCategory = document.createElement("span");
+    expenseCategory.textContent = newExpense.category_name;
 
-.logo:hover {
-    transform: scale(1.1);
-    transition: 0.3s;
-}
+    expenseInfo.append(expenseName, expenseCategory);
 
-main section {
-  display: flex;
-  flex: 1;
-  gap: 1.25rem;
-  padding-bottom: 2rem;
-}
+    const expenseAmount = document.createElement("span");
+    expenseAmount.classList.add("expense-amount");
+    expenseAmount.textContent = parseInt(newExpense.amount);
 
-form {
-  background-color: #f9fbfa;
-  border-radius: 1rem;
-  padding: 2.5rem;
-  max-width: 462px;
+    const removeIcon = document.createElement("img");
+    removeIcon.setAttribute("src", "img/remove.svg");
+    removeIcon.setAttribute("alt", "remover");
+    removeIcon.classList.add("remove-icon");
 
-  display: flex;
-  flex-direction: column;
-}
+    expenseItem.append(expenseIcon, expenseInfo, expenseAmount, removeIcon);
+    expenseList.append(expenseItem);
 
-form h1 {
-  font-size: 1.25rem;
-}
-
-form p {
-  font-size: 0.87rem;
-  color: #4d5c57;
-  margin: 0.75rem 0 2.5rem;
-}
-
-fieldset {
-  border: none;
-  display: flex;
-}
-
-fieldset legend {
-  text-transform: uppercase;
-  font-size: 0.62rem;
-  color: #4d5c57;
-  margin-bottom: 0.5rem;
-}
-
-fieldset:focus-within legend {
-  color: #1f8459;
-  font-weight: 700;
-}
-
-input,
-select {
-  flex: 1;
-  height: 3rem;
-  border-radius: 0.5rem;
-  border: 1px solid #cdd5d2;
-  padding: 0 1rem;
-  font-size: 0.87rem;
-  color: #1f2523;
-  background-color: transparent;
-  outline: none;
-}
-
-select {
-  appearance: none;
-  background-image: url(img/chevron-down.svg);
-  background-repeat: no-repeat;
-  background-position: right 0.7rem top 50%;
-  background-size: 1.25rem auto;
-}
-
-input::placeholder,
-select:invalid {
-  color: #4d5c57;
-}
-
-input:focus,
-select:focus {
-  border: 1.5px solid #1f8459;
-}
-
-.inputs-row {
-  display: flex;
-  flex: 1;
-
-  gap: 1rem;
-  margin-top: 1rem;
-}
-
-.inputs-row fieldset:first-child {
-  flex: 1;
-}
-
-.inputs-row fieldset:last-child input {
-  max-width: 154px;
-}
-
-form button {
-  height: 3rem;
-  border-radius: 0.5rem;
-  border: none;
-  font-size: 16px;
-  color: #ffffff;
-  background-color: #1f8459;
-  font-weight: 700;
-  padding: 1rem 1.25rem;
-  cursor: pointer;
-
-  transition: background-color 0.2s;
-}
-
-button:hover {
-  background-color: #2cb178;
-  transform: scale(1.1);
-  transition: 0.3s;
-}
-
-form button:last-child {
-  margin-top: 2rem;
-}
-
-#sendButton {
-  position: fixed;         /* Fixa o botão em relação à janela de visualização */
-  top: 100px;               /* Define a distância do topo */
-  right: 230px;             /* Define a distância da borda direita */
-  padding: 10px 20px;      /* Adiciona preenchimento ao botão */
-  background-color: #1f8459; /* Cor de fundo */
-  color: white;            /* Cor do texto */
-  border: none;            /* Remove a borda padrão */
-  border-radius: 5px;      /* Bordas arredondadas */
-  font-size: 16px;         /* Define o tamanho da fonte */
-  font-weight: 700;  
-  cursor: pointer;        /* Torna o cursor um ponteiro quando passa sobre o botão */
-  z-index: 999;            /* Garante que o botão fique sobre outros elementos */
-}
-
-#sendButton:hover {
-  background-color: #2cb178; /* Cor do botão ao passar o mouse */
-  transform: scale(1.1);
-  transition: 0.3s;
-}
-
-
-aside {
-  background-color: #f9fbfa;
-  border-radius: 1rem;
-  padding: 2.5rem;
-  max-width: 462px;
-
-  min-width: 600px;
-}
-
-aside header {
-  display: flex;
-  justify-content: space-between;
-
-  border-bottom-width: 1px;
-  border-bottom-style: solid;
-  border-bottom-color: #e4ece9;
-  padding-bottom: 1.5rem;
-  margin-bottom: 1.5rem;
-}
-aside header p {
-  color: #4d5c57;
-  font-weight: 400;
-  font-size: 1rem;
-}
-
-aside header p span {
-  color: #4d5c57;
-  font-weight: 400;
-  font-size: 0.87rem;
-}
-
-aside header p i {
-  color: #cdd5d2;
-  margin: 0 0.5rem;
-  font-style: normal;
-}
-
-aside header h2 {
-  font-size: 1rem;
-  color: #1f2523;
-}
-
-aside header small {
-  color: #4d5c57;
-  font-weight: 400;
-  font-size: 0.75rem;
-  margin-right: 0.25rem;
-}
-
-aside ul {
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-
-  max-height: 310px;
-  min-height: 310px;
-
-  overflow-y: scroll;
-}
-
-.expense {
-  display: flex;
-  align-items: center;
-  height: 38px;
-}
-
-.expense img:first-child {
-  width: 2rem;
-  height: 2rem;
-
-  margin-right: 0.75rem;
-}
-
-.expense > div {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-}
-
-.expense-info strong {
-  font-size: 0.87rem;
-  color: #1f2523;
-}
-
-.expense-info span {
-  font-size: 0.75rem;
-  color: #4d5c57;
-}
-
-.expense-amount {
-  font-size: 0.87rem;
-  color: #1f2523;
-  font-weight: 600;
-}
-
-.expense-amount small {
-  font-size: 0.75rem;
-  color: #4d5c57;
-  font-weight: 400;
-  margin-right: 0.25rem;
-}
-
-.remove-icon {
-  height: 1rem;
-  margin-left: 0.5rem;
-
-  cursor: pointer;
-  transition: opacity 0.2s;
-}
-
-.remove-icon:hover {
-  opacity: 0.7;
-}
-
-@media (min-width: 1100px) {
-  form {
-    max-height: 428px;
+    formClear();
+    updateQuantity();
+  } catch (error) {
+    alert("Não foi possível adicionar o material.");
+    console.log(error);
   }
 }
 
-@media (max-width: 1100px) {
-  :root {
-    font-size: 14px;
-  }
-
-  main,
-  aside {
-    min-width: 100%;
-  }
-
-  main section {
-    flex-direction: column;
-    width: 100%;
-
-    padding: 1.5rem;
-  }
-
-  main section form {
-    min-width: 100%;
-  }
-
-  main section aside ul {
-    width: 100%;
-    height: auto;
-    overflow: auto;
-  }
+// Atualiza somente a quantidade de Materiais
+function updateQuantity() {
+  const items = expenseList.children;
+  expensesQuantity.textContent = `${items.length} ${items.length > 1 ? "Materiais" : "Material"}`;
 }
 
-@media (max-width: 620px) {
-  .inputs-row {
-    flex-direction: column;
+// Evento que captura o clique nos itens da lista
+expenseList.addEventListener("click", function (event) {
+  if (event.target.classList.contains("remove-icon")) {
+    const item = event.target.closest(".expense");
+    item.remove();
   }
+  updateQuantity();
+});
 
-  .inputs-row fieldset:last-child input {
-    max-width: auto;
-    min-width: 100%;
-  }
-
-  aside header {
-    flex-direction: column;
-    align-items: center;
-  }
+// Limpa o formulário
+function formClear() {
+  expense.value = "";
+  // category.value = "";
+  amount.value = "";
+  expense.focus();
 }
+
+// Enviar os dados para o Formcarry quando o botão Enviar for clicado
+const sendButton = document.getElementById("sendButton");
+sendButton.addEventListener("click", function () {
+  const items = expenseList.children;
+  const materiais = [];
+
+  for (let item of items) {
+    const material = {
+      descricao: item.querySelector("strong").textContent,
+      setor: item.querySelector("span").textContent,
+      quantidade: item.querySelector(".expense-amount").textContent,
+    };
+    materiais.push(material);
+  }
+
+  // Formatando o corpo da requisição
+  const data = new FormData();
+  // Adicionando um campo para os materiais
+  materiais.forEach((material, index) => {
+    data.append(`material[${index}][descricao]`, material.descricao);
+    data.append(`material[${index}][setor]`, material.setor);
+    data.append(`material[${index}][quantidade]`, material.quantidade);
+  });
+
+  // Enviar os dados para o Formcarry
+  fetch("https://formcarry.com/s/CQCMWqykwZZ", {
+    method: "POST",
+    body: data,
+  })
+    .then((response) => {
+      if (response.ok) {
+        alert("Materiais enviados com sucesso!");
+      } else {
+        throw new Error("Erro ao enviar. Código: " + response.status);
+      }
+    })
+    .catch((error) => {
+      alert("Falha ao enviar materiais.");
+      console.error(error);
+    });
+});
+
